@@ -1,5 +1,9 @@
 Revision history for DBIx-Perlish
 
+NEXT
+       Comparisons with undefined values are converted into
+       proper SQL syntax.
+
 0.17  Tue Feb 20 10:26:21 2007
        Added autogrouping when aggregates were seen in the return statement.
 
